--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background: rgb(63,94,251);
+  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
 .header{
-  color:#f05454;
+  color:#222831;
   display: flex;
 
 }
