--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
   box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
   display: flex;
   justify-content: space-evenly;
+  opacity:0.6;
 }
 
 .app:hover{
